@@ -13,6 +13,7 @@ Version 0.4i
  - Adjusting muscle tone (not widely used atm)
  - Adjusting hip size
  - More stat adjustments
+* Added some minor scenes for picking up ingredients.
 
 --------------------------------------------
              PREVIOUS VERSIONS
